<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuranFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">
        <EditText
            android:id="@+id/search_surah_id"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text">
        </EditText>

        <Button
            android:id="@+id/quran_sort_btn_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/sort" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quran_recite_last_position_LinearLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:background="@color/colorActive">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/last_position"/>

        <TextView
            android:id="@+id/quran_recite_last_position_tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quran_fragment_recycler_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>